Fix z-index issue in particle js and content

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -264,9 +264,8 @@ $technology_width: 100%;
     height: 100vh;
     position: relative;
     .content-section{
-      z-index: 7;
-      position: relative;
       .inner-content{
+        z-index: 7;
         position: relative;
       }
     }
